Changes for 4.2.0beta2

New features:
.......PS. [ZBXNEXT-5037] added 'skip' parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
..F....... [ZBX-15625] removed links leading to media type edit form for non-superadmins in Reports->Notifications page (Ivo)
.D.G...PS. [ZBX-8344] remove trimming of leading and trailing whitespaces for data received from agent (akozlovs)
.......PS. [ZBX-15703] fixed use of uninitialized variable when receiving 0 bytes on listening socket (akozlovs)
..F....... [ZBX-15539] fixed validation of master item in item update form (miks)
..F....... [ZBX-15532] fixed undefined index error on problems page when trigger expression contains web items (gcalenko, Sasha)
A......... [ZBX-15488] fixed permission check for inherited triggers (miks)
..F....... [ZBX-15646] fixed web-server 'Request-URI Too Long' error in trigger description dialog (miks)
..F....... [ZBX-15688] fixed wrong host group and host selection in trigger dependencies window (talbergs)
..F....... [ZBX-15686] fixed wrong number of selected triggers when navigate to inherited template (talbergs)

--------------------------------------------------------------------------------
Changes for 4.2.0beta1

New features:
A.F....... [ZBXNEXT-221] implemented hosts and hostgroups multiselect in items and triggers table filter (talbergs)
A.F.....S. [ZBXNEXT-4944] added javascript item preprocessing step (agriscenko, wiper)
A.F....... [ZBXNEXT-4857] added animated GIF support for Zabbix Maps (ashubin, gcalenko, vasilijs)
..F....... [ZBXNEXT-5046] added non-destructive resizing and reordering of dashboard widgets (ashubin, gcalenko, miks)
A.F.I..PS. [ZBXNEXT-4731] implemented host and template level tags (agriscenko, wiper, yurii)
..FGI..PST [ZBXNEXT-401,ZBXNEXT-4907,ZBXNEXT-4955] added monitoring of internal metrics from an external Zabbix instance (vasilijs, viktors)